--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "reactstrap": "^9.1.8",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
@@ -41,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.1"
   }
 }
